# tennis-better

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/tennis_better/: __init__.py  atp_scraper.py  livescore_scraper.py  main.py  odds.py
tests/: init_duckdb.py
