[project]
name = "tennis-better"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.32.5",
]

[tool.uv]
package = true

# to enable packaging in editable mode
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tennis-better = "tennis_better.main:main"
